Fix a wrapping bug in FF

--- a/source/style/class/year.scss
+++ b/source/style/class/year.scss
@@ -26,6 +26,7 @@
     }
     
     a {
+      display: block; // Fixes a wrapping bug in FF
       text-decoration: none;
       margin-left: -1px;
       margin-right: -5px;
